--- a/projects/komponentkartan/src/assets/partials/_components.list.scss
+++ b/projects/komponentkartan/src/assets/partials/_components.list.scss
@@ -369,7 +369,6 @@ vgr-list.list--new-item-added {
 
 .list-item__content {
   position: relative;
-  overflow: hidden;
   margin-left: -5px;
   display: block;
   border-spacing: 10px;
